--- a/package.json
+++ b/package.json
@@ -10,8 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^20.5.0",
+    "@react-native-firebase/messaging": "^20.5.0",
+    "@react-native-vector-icons/fontawesome5": "^5.15.4-alpha.28",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "iconsax-react-native": "^0.0.8",
     "react": "18.3.1",
-    "react-native": "0.75.3"
+    "react-native": "0.75.3",
+    "react-native-animated-nav-tab-bar": "^3.1.11",
+    "react-native-curved-bottom-bar": "^3.3.1",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.7.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
