--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
+IPV4 = 192.168.1.3
 API = http://192.168.1.3:3000/api/
-API_Get_List_Banner = get_list_banner
+API_Get_List_Banner = get_list_banner_ByStatus
 
 API_REGISTER_ACCOUNT = Singup
 API_LOGIN_EMAIL = loginEmail
