--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 IPV4 = 192.168.1.3
 API = http://192.168.1.3:3000/api/
+
 API_Get_List_Banner = get_list_banner_ByStatus
 
 API_REGISTER_ACCOUNT = Singup
@@ -7,3 +8,9 @@ API_LOGIN_EMAIL = loginEmail
 API_LOGIN_PHONE = loginPhone
 API_UPDATE_ACCOUNT = updateUser/
 API_UPDATE_LoyaltyPoints =updateLoyaltyPoints/
+
+API_GET_LIST_CATEGORY = getListCategory
+
+API_GET_SERVICE_BY_CATEGORY = /services/getListServiceByCategory
+
+API_GET_LIST_CATEGORY_PRODUCT = get_list_Category_Product
