--- a/.env
+++ b/.env
@@ -12,5 +12,7 @@ API_UPDATE_LoyaltyPoints =updateLoyaltyPoints/
 API_GET_LIST_CATEGORY = getListCategory
 
 API_GET_SERVICE_BY_CATEGORY = /services/getListServiceByCategory
+API_GET_GROUPED_SERVICES = /getGroupedServices
 
 API_GET_LIST_CATEGORY_PRODUCT = get_list_Category_Product
+
