--- a/.env
+++ b/.env
@@ -7,3 +7,11 @@ API_LOGIN_EMAIL = loginEmail
 API_LOGIN_PHONE = loginPhone
 API_UPDATE_ACCOUNT = updateUser/
 API_UPDATE_LoyaltyPoints =updateLoyaltyPoints/
+
+API_GET_LIST_CATEGORY = getListCategory
+
+API_GET_SERVICE_BY_CATEGORY = /services/getListServiceByCategory
+API_GET_GROUPED_SERVICES = /getGroupedServices
+
+API_GET_LIST_CATEGORY_PRODUCT = get_list_Category_Product
+
