--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "log": "react-native log-android"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
