--- a/.env
+++ b/.env
@@ -16,3 +16,4 @@ API_GET_GROUPED_SERVICES = /getGroupedServices
 
 API_GET_LIST_CATEGORY_PRODUCT = get_list_Category_Product
 
+API_GET_LIST_PRODUCT = products/getListProduct
