--- a/.env
+++ b/.env
@@ -16,3 +16,5 @@ API_GET_GROUPED_SERVICES = /getGroupedServices
 
 API_GET_LIST_CATEGORY_PRODUCT = get_list_Category_Product
 
+API_GET_LIST_CATEGORY_BARBER= get_list_barber
+
