--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-IPV4 = 192.168.0.103
-API = http://192.168.0.103:3000/api/
+IPV4 = 192.168.100.87
+API = http://192.168.100.87:3000/api/
 
 API_Get_List_Banner = get_list_banner_ByStatus
 
@@ -9,15 +9,13 @@ API_LOGIN_PHONE = loginPhone
 API_UPDATE_ACCOUNT = updateUser/
 API_UPDATE_LoyaltyPoints =updateLoyaltyPoints/
 
-API_GET_LIST_CATEGORY = getListCategory
+API_GET_LIST_CATEGORY = categorys/get_list_category
 
 API_GET_SERVICE_BY_CATEGORY = /services/getListServiceByCategory
 API_GET_GROUPED_SERVICES = /getGroupedServices
 
-API_GET_LIST_CATEGORY_PRODUCT = get_list_Category_Product
+API_GET_LIST_CATEGORY_PRODUCT = categoryProducts/get_list_Category_Product
 
 API_GET_LIST_CATEGORY_BARBER= get_list_barber
 
-API_GET_LIST_CATEGORY_BARBER= get_list_barber
-
-API_GET_LIST_PRODUCT = products/getListProduct
+API_GET_LIST_PRODUCT = products/get_list_product
