--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-IPV4 = 192.168.1.3
-API = http://192.168.1.3:3000/api/
+IPV4 = 192.168.10.113
+API = http://192.168.10.113:3000/api/
 
 API_Get_List_Banner = get_list_banner_ByStatus
 
@@ -16,3 +16,20 @@ API_GET_GROUPED_SERVICES = /getGroupedServices
 
 API_GET_LIST_CATEGORY_PRODUCT = get_list_Category_Product
 
+API_GET_LIST_APPOINTMENTS = /appointments/getListAppointments
+
+API_GET_LIST_SERVICES = /services/get_list_service
+
+API_GET_LIST_BARBER = get_list_barber
+
+
+# const data = [
+#     { name: 'ShineCombo 2', time: '⏱ 10p', image: require('../../Resources/assets/icons/flagvn.png'), mota: 'Combo cắt kỹ, combo gội massage thư giãn cổ vai gáy, combo cạo mặt sáng', ttthem: 'NEW', danhgia: 'Tiêu chuẩn', price: '188K' },
+#     { name: 'Cắt + Gội Combo 3', time: '⏱ 40p', image: require('../../Resources/assets/icons/flagvn.png'), mota: 'Combo cắt kỹ, combo chăm sóc da chuyên sâu sáng đều màu da bằng thiết bị công nghệ', ttthem: 'Tặng massage cổ vai gáy', danhgia: 'Tiêu chuẩn', price: '299K' },
+#     { name: 'Cắt + Gội Combo 4', time: '⏱ 60p', image: require('../../Resources/assets/icons/flagvn.png'), mota: 'Combo cắt kỹ, combo gội massage bấm huyệt đầu, cổ vai gáy, combo massage', ttthem: 'Tặng detox da đầu', danhgia: 'Tiêu chuẩn', price: '379K' },
+#     { name: 'Cắt + Gội Combo 5', time: '⏱ 17p', image: require('../../Resources/assets/icons/flagvn.png'), mota: 'Combo cắt gội massage và lấy nhân mụn chuẩn y khoa giúp trẻ hóa làn da, giảm', ttthem: 'Tặng massage cổ vai gáy', danhgia: 'Tiêu chuẩn', price: '429K' },
+#     { name: 'Cắt gội', time: '⏱ 22p', image: require('../../Resources/assets/icons/flagvn.png'), mota: 'Combo Cắt kỹ và Combo Gội massage', ttthem: 'Đồng giá cả tuần', danhgia: 'Tiêu chuẩn', price: '120K' },
+#     { name: 'Kid Combo', time: '⏱ 44p', image: require('../../Resources/assets/icons/flagvn.png'), mota: 'Cắt xả tạo kiểu - Stylist thân thiện với trẻ nhỏ Bấm viền nhẹ nhàng', danhgia: 'Tiêu chuẩn', price: '70K' },
+#     { name: 'Combo lấy ráy tai VIP', time: '⏱ 54p', image: require('../../Resources/assets/icons/flagvn.png'), mota: 'Lấy ráy tai sạch và đầy sảng khoái với máy massage ráy tai đa điểm, rửa tai bọt, lắm mặt sáng', ttthem: 'Cực thư giãn', danhgia: 'Tiêu chuẩn', price: '70K' },
+#     { name: 'Cắt xả', time: '⏱ 25p', image: require('../../Resources/assets/icons/flagvn.png'), mota: 'Stylist cắt - xả - vuốt sáp tạo kiểu (Không gội & massage)', danhgia: 'Tiêu chuẩn', price: '100K' },
+#   ];
