--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-firebase/app": "^20.5.0",
+    "@react-native-firebase/auth": "^20.5.0",
     "@react-native-firebase/messaging": "^20.5.0",
     "@react-native-vector-icons/fontawesome5": "^5.15.4-alpha.28",
     "@react-navigation/bottom-tabs": "^6.6.1",
