--- a/.env
+++ b/.env
@@ -20,3 +20,5 @@ API_GET_LIST_CATEGORY_BARBER= get_list_barber
 
 API_GET_LIST_PRODUCT = products/get_list_product
 API_GET_LIST_PRODUCT_BY_CATEGORY = products/get_list_product_by_category
+
+API_SEND_NOTIFICATION = notifications/send_notification
