--- a/.env
+++ b/.env
@@ -24,4 +24,5 @@ API_GET_LIST_BARBER = get_list_barber
 API_GET_LIST_CATEGORY_BARBER= get_list_barber
 API_HTTP_ZALOPAY=zaloPay
 
-API_ADD_appointment = add_Appointment
+API_ADD_appointment = addAppointmentWithPayment
+                       
