--- a/.env
+++ b/.env
@@ -9,6 +9,15 @@ API_LOGIN_PHONE = loginPhone
 API_UPDATE_ACCOUNT = updateUser/
 API_UPDATE_LoyaltyPoints =updateLoyaltyPoints/
 
+API_GET_USER_CART =  carts/get_user_cart
+API_ADD_CART = carts/add_car
+API_UPDATE_CART = carts/update_cart
+
+API_GET_LIST_CART_ITEM = cartItems/get_list_cartItem
+API_ADD_CART_ITEM = cartItems/add_cartItem
+API_DELETE_CART_ITEM = cartItems/delete_cartItem
+API_UPDATE_CART_ITEM = cartItems/update_cart
+
 API_GET_LIST_CATEGORY = categorys/get_list_category
 
 API_GET_SERVICE_BY_CATEGORY = /services/getListServiceByCategory
@@ -27,5 +36,7 @@ API_HTTP_ZALOPAY=zaloPay
 
 API_ADD_appointment = add_Appointment
 
+API_GET_LIST_PRODUCT = products/get_list_product
 
-API_SEND_NOTIFICATION = notifications/send_notification
+API_SEND_NOTIFICATION = notifications
+API_GET_LIST_PRODUCT_BY_CATEGORY = products/get_list_product_by_category
