--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -33,6 +33,8 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # to write custom TurboModules/Fabric components OR use libraries that
 # are providing them.
 newArchEnabled=false
+android.useAndroidX=true
+android.enableJetifier=true
 
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
