--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.4.1",
     "react-native-paper": "^5.12.5",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.15.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
