--- a/.env
+++ b/.env
@@ -6,11 +6,9 @@ API_Get_List_Banner = get_list_banner_ByStatus
 API_REGISTER_ACCOUNT = Singup
 API_LOGIN_EMAIL = loginEmail
 API_LOGIN_PHONE = loginPhone
-API_UPDATE_ACCOUNT = updateUser
+API_UPDATE_ACCOUNT = updateUser/
 API_UPDATE_LoyaltyPoints =updateLoyaltyPoints/
-API_CHECK_PHONE_NUMBER= checkPhoneNumber
-API_CHECK_PHONE_AND_GET_ID = checkPhoneAndGetId
-API_GET_USER_INFO = /user
+
 API_GET_USER_CART =  carts/get_user_cart
 API_ADD_CART = carts/add_car
 API_UPDATE_CART = carts/update_cart
