--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ IPV4 = 192.168.1.8
 API = http://192.168.1.8:3000/api/
 API_Get_List_Banner = get_list_banner_ByStatus
 
-API_REGISTER_ACCOUNT = Singup
+API_REGISTER_ACCOUNT = SigupUser
 API_LOGIN_EMAIL = loginEmail
 API_LOGIN_PHONE = loginPhone
 API_UPDATE_ACCOUNT = updateUser/
@@ -24,4 +24,4 @@ API_GET_LIST_BARBER = get_list_barber
 API_GET_LIST_CATEGORY_BARBER= get_list_barber
 API_HTTP_ZALOPAY=zaloPay
 
-API_ADD_appointment = add_Appointment
+API_ADD_appointment = addAppointmentWithPayment
