--- a/.env
+++ b/.env
@@ -8,6 +8,9 @@ API_LOGIN_EMAIL = loginEmail
 API_LOGIN_PHONE = loginPhone
 API_UPDATE_ACCOUNT = updateUser/
 API_UPDATE_LoyaltyPoints =updateLoyaltyPoints/
+API_CHECK_PHONE_NUMBER= checkPhoneNumber
+API_CHECK_PHONE_AND_GET_ID = checkPhoneAndGetId
+API_GET_USER_INFO = /user
 
 API_GET_USER_CART =  carts/get_user_cart
 API_ADD_CART = carts/add_car
@@ -37,6 +40,8 @@ API_HTTP_ZALOPAY=zaloPay
 API_ADD_appointment = add_Appointment
 
 API_GET_LIST_PRODUCT = products/get_list_product
+API_GET_PRODUCT_DETAILS = products/get_product_detail
+API_SEARCH_PRODUCT_BY_NAME = products/search_product_by_name
 
 API_SEND_NOTIFICATION = notifications
 API_GET_LIST_PRODUCT_BY_CATEGORY = products/get_list_product_by_category
