--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "BeeBarber": "file:",
+    "eventemitter3": "^5.0.1",
     "iconsax-react-native": "^0.0.8",
     "pinar": "^0.12.2",
     "react": "18.3.1",
