Hiển thị danh sách đặt lịch các chức năng hủy lịch và đánh giá

--- a/.env
+++ b/.env
@@ -25,3 +25,6 @@ API_GET_LIST_CATEGORY_BARBER= get_list_barber
 API_HTTP_ZALOPAY=zaloPay
 
 API_ADD_appointment = addAppointmentWithPayment
+API_ADD_appointment_history = getAppointmentsByIduser/
+
+API_ADD_Review = reviews
