--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ API_UPDATE_LoyaltyPoints =updateLoyaltyPoints/
 API_CHECK_PHONE_NUMBER= checkPhoneNumber
 API_CHECK_PHONE_AND_GET_ID = checkPhoneAndGetId
 API_GET_USER_INFO = /user
+API_GET_USER_DETAIL = users/getUserDetailById
 
 API_GET_USER_CART =  carts/get_user_cart
 API_ADD_CART = carts/add_car
