--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.8",
     "BeeBarber": "file:",
     "eventemitter3": "^5.0.1",
     "iconsax-react-native": "^0.0.8",
@@ -43,7 +45,9 @@
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
     "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
