--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ API = http://192.168.100.87:3000/api/
 
 API_Get_List_Banner = get_list_banner_ByStatus
 
-API_REGISTER_ACCOUNT = SigupUser
+API_REGISTER_ACCOUNT = /SignUp
 API_LOGIN_EMAIL = loginEmail
 API_LOGIN_PHONE = loginPhone
 API_UPDATE_ACCOUNT = updateUser/
@@ -43,6 +43,9 @@ API_ADD_appointment = add_Appointment
 API_GET_LIST_PRODUCT = products/get_list_product
 API_GET_PRODUCT_DETAILS = products/get_product_detail
 API_SEARCH_PRODUCT_BY_NAME = products/search_product_by_name
+API_GET_LIST_PRODUCT_BY_CATEGORY = products/get_list_product_by_category
 
 API_SEND_NOTIFICATION = notifications
-API_GET_LIST_PRODUCT_BY_CATEGORY = products/get_list_product_by_category
+API_GET_LIST_NOTIFICATIONS = notifications/getNotifications
+
+
