--- a/.env
+++ b/.env
@@ -38,6 +38,9 @@ API_GET_LIST_BARBER = get_list_barber
 API_GET_LIST_CATEGORY_BARBER= get_list_barber
 API_HTTP_ZALOPAY=zaloPay
 
+API_SEND_NOTIFICATION = notifications
+API_GET_LIST_NOTIFICATIONS = notifications/getNotifications
+
 API_GET_LIST_PRODUCT = products/get_list_product
 API_GET_PRODUCT_DETAILS = products/get_product_detail
 API_SEARCH_PRODUCT_BY_NAME = products/search_product_by_name
