--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-IPV4 = 192.168.1.11
-API = http://192.168.1.11:3000/api/
+IPV4 = 192.168.100.87
+API = http://192.168.100.87:3000/api/
 
 API_Get_List_Banner = get_list_banner_ByStatus
 
@@ -14,7 +14,7 @@ API_GET_USER_INFO = /user
 API_GET_USER_DETAIL = users/getUserDetailById
 
 API_GET_USER_CART =  carts/get_user_cart
-API_ADD_CART = carts/add_car
+API_ADD_CART = carts/add_cart
 API_UPDATE_CART = carts/update_cart
 
 API_GET_LIST_CART_ITEM = cartItems/get_list_cartItem
