--- a/.env
+++ b/.env
@@ -40,6 +40,7 @@ API_HTTP_ZALOPAY=zaloPay
 
 API_SEND_NOTIFICATION = notifications
 API_GET_LIST_NOTIFICATIONS = notifications/getNotifications
+API_SEND_SCHEDULE_NOTIFICATION = notifications/schedule
 
 API_GET_LIST_PRODUCT = products/get_list_product
 API_GET_PRODUCT_DETAILS = products/get_product_detail
