code quên mk, cập nhật đăng kí và update user

--- a/.env
+++ b/.env
@@ -1,17 +1,15 @@
-IPV4 = 192.168.1.9
-API = http://192.168.1.9:3000/api/
+IPV4 = 192.168.1.249
+API = http://192.168.1.249:3000/api/
 
 API_Get_List_Banner = get_list_banner_ByStatus
 
 API_REGISTER_ACCOUNT = /SignUp
-API_LOGIN_EMAIL = loginEmail
 API_LOGIN_PHONE = loginPhone
-API_UPDATE_ACCOUNT = updateUser/
-API_UPDATE_LoyaltyPoints =updateLoyaltyPoints/
-API_CHECK_PHONE_NUMBER= checkPhoneNumber
-API_CHECK_PHONE_AND_GET_ID = checkPhoneAndGetId
-API_GET_USER_INFO = /user
 API_GET_USER_DETAIL = users/getUserDetailById
+API_SEND_OTP=/sendOtp
+API_VERIFY_OTP=/verifyOtp
+API_UPDATE_PASSWORD=/updatePassword
+API_UPDATE_USER=/updateUser
 
 API_GET_USER_CART =  carts/get_user_cart
 API_ADD_CART = carts/add_cart
