--- a/.env
+++ b/.env
@@ -21,6 +21,7 @@ API_GET_LIST_CART_ITEM = cartItems/get_list_cartItem
 API_ADD_CART_ITEM = cartItems/add_cartItem
 API_DELETE_CART_ITEM = cartItems/delete_cartItem
 API_UPDATE_CART_ITEM = cartItems/update_cart
+API_UPDATE_CART_ITEM = cartItems/update_cart_quantity
 
 API_GET_LIST_CATEGORY = categorys/get_list_category
 
