--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
-IPV4 = 172.20.10.14
-API = http://172.20.10.14:3000/api/
+IPV4 = 192.168.22.104
+API = http://192.168.22.104:3000/api/
 
 API_Get_List_Banner = get_list_banner_ByStatus
 
@@ -33,7 +33,7 @@ API_GET_LIST_APPOINTMENTS = /appointments/getListAppointments
 
 API_GET_LIST_SERVICES = /services/get_list_service
 
-API_GET_LIST_BARBER = get_list_barber
+API_GET_LIST_BARBER = get_list_barberStatus
 
 API_GET_LIST_CATEGORY_BARBER= get_list_barber
 API_HTTP_ZALOPAY=zaloPay
